Last Save Before Database Method.

--- a/magentr/magentr.csproj
+++ b/magentr/magentr.csproj
@@ -59,6 +59,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AgentDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AgentDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -87,6 +92,17 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="AgentDataSet.xsc">
+      <DependentUpon>AgentDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="AgentDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>AgentDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="AgentDataSet.xss">
+      <DependentUpon>AgentDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -136,6 +152,9 @@
   <ItemGroup>
     <Content Include="devhelp\DevelopmentNotes.html" />
     <Content Include="devhelp\stylesheets\DevelopmentNotes_Pretty.css" />
+    <Content Include="magentr.accdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="devhelp\resources\" />
